spec 변경
